# iabs_synchronizer

./: .gitignore  README.md  pyproject.toml  requirements-gdrive.txt  requirements.txt  setup.py
examples/: basic_usage.py  batch_processing.py  custom_config.py  gap_detection_example.py
iabs_synchronizer/: __init__.py  config.py
iabs_synchronizer/cli/: main.py
iabs_synchronizer/core/: alignment.py  filtering.py  io.py  postprocessing.py
iabs_synchronizer/gdrive/: adapter.py
iabs_synchronizer/models/: data_structures.py
iabs_synchronizer/pipeline/: discovery.py  synchronizer.py  validation.py
iabs_synchronizer/utils/: gap_detection.py  logging.py
tests/: test_missing_timelines_new_format.py
tests/cli/: test_cli_commands.py
tests/edge_cases/: test_sparse_sampling.py  test_timeline_gaps.py
tests/integration/: test_alignment_modes.py  test_temporal_overlap.py
tests/unit/: test_gap_detection.py  test_missing_timelines_alignment.py
