[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iabs-synchronizer"
version = "1.0.0"
description = "Neuroscience data synchronization tool for multi-modal recordings"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "IABS Lab"}
]
keywords = [
    "neuroscience",
    "calcium-imaging",
    "synchronization",
    "alignment",
    "behavior-tracking",
    "data-processing"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "openpyxl>=3.0.0",  # For Excel file support
    "fsspec>=2021.11.0",  # Required by pandas for file I/O
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
full = [
    "driada>=0.7.0",  # Data I/O utilities
    "tqdm>=4.60.0",  # Progress bars for batch processing
]

[project.scripts]
iabs-sync = "iabs_synchronizer.cli.main:main"

[project.urls]
Homepage = "https://github.com/iabs-lab/synchronizer"
Documentation = "https://github.com/iabs-lab/synchronizer#readme"
Repository = "https://github.com/iabs-lab/synchronizer"
Issues = "https://github.com/iabs-lab/synchronizer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["iabs_synchronizer*"]
exclude = ["tests*", "examples*"]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
